# giterdone

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  API_DOCUMENTATION.md  Dockerfile  Dockerfile.prod  TEST_SUMMARY.md  conftest.py  manage.py  pyproject.toml
backend/giterdone/: asgi.py  settings.py  urls.py  wsgi.py
backend/health/: urls.py  views.py
backend/todos/: admin.py  models.py  serializers.py  urls.py  views.py
backend/todos/migrations/: 0001_initial.py  0002_initial.py
backend/todos/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py  webauthn_utils.py
backend/users/migrations/: 0001_initial.py  0002_user_age_user_avatar_style_user_birthday_and_more.py  0003_remove_user_age.py
backend/users/tests/: test_auth_views.py  test_models.py  test_serializers.py
frontend/: Dockerfile  Dockerfile.prod  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  custom.d.ts  index.css
frontend/src/components/auth/: LoginPage.tsx  RecoveryPage.tsx  RegisterPage.tsx
frontend/src/components/layout/: Header.tsx  HomePage.tsx  ProtectedRoute.tsx
frontend/src/components/settings/: ProfilePage.tsx  SecurityPage.tsx
frontend/src/components/todos/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/services/: api.ts  webauthn.ts
frontend/src/types/: index.ts
frontend/src/utils/: avatar.ts
